fixes z-index for archive div so live vid doesn't overlap

--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -301,6 +301,7 @@ strong{
   display: table;
   width: 100%;
   height: 800px;
+  z-index: 10000;
 
   .modal-tablecell {
       display: table-cell;
